--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,12 @@
 
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.3.2.RELEASE</version>
+        <relativePath/>
+    </parent>
     <groupId>com.actilive</groupId>
     <artifactId>ers</artifactId>
     <version>0.0.1-SNAPSHOT</version>
