--- a/pom.xml
+++ b/pom.xml
@@ -14,9 +14,43 @@
     <groupId>com.actilive</groupId>
     <artifactId>ers</artifactId>
     <version>${revision}</version>
+    <packaging>pom</packaging>
 
     <properties>
+        <java.version>11</java.version>
         <revision>0.0.1-SNAPSHOT</revision>
     </properties>
+
+    <modules>
+        <module>ers-service</module>
+    </modules>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>flatten-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>flatten</id>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>flatten</goal>
+                        </goals>
+                        <configuration>
+                            <flattenMode>clean</flattenMode>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>flatten.clean</id>
+                        <phase>clean</phase>
+                        <goals>
+                            <goal>clean</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
