--- a/ers-service/pom.xml
+++ b/ers-service/pom.xml
@@ -22,4 +22,11 @@
         </plugins>
     </build>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
+    </dependencies>
+
 </project>
