--- a/pom.xml
+++ b/pom.xml
@@ -19,11 +19,29 @@
     <properties>
         <java.version>11</java.version>
         <revision>0.0.1-SNAPSHOT</revision>
+
+        <jackson.version>2.11.1</jackson.version>
     </properties>
 
     <modules>
         <module>ers-service</module>
     </modules>
+
+    <dependencyManagement>
+        <dependencies>
+            <!-- external dependencies -->
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>${jackson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.dataformat</groupId>
+                <artifactId>jackson-dataformat-yaml</artifactId>
+                <version>${jackson.version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <build>
         <plugins>
