--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,8 @@
         <java.version>11</java.version>
         <revision>0.0.1-SNAPSHOT</revision>
 
+        <spring-clud.version>Hoxton.SR6</spring-clud.version>
+
         <jackson.version>2.11.1</jackson.version>
     </properties>
 
@@ -44,9 +46,9 @@
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
-                <version>Hoxton.SR6</version>
+                <version>${spring-clud.version}</version>
                 <type>pom</type>
-                <scope>runtime</scope>
+                <scope>import</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
