--- a/ers-service/src/main/resources/application-dev.yml
+++ b/ers-service/src/main/resources/application-dev.yml
@@ -9,3 +9,12 @@ spring:
 
 logging:
   config: classpath:log4j2-dev.yml
+
+eureka:
+  instance:
+    hostname: localhost
+  client:
+    registerWithEureka: false
+    fetchRegistry: false
+    serviceUrl:
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
