--- a/ers-service/src/main/resources/log4j2-dev.yml
+++ b/ers-service/src/main/resources/log4j2-dev.yml
@@ -25,6 +25,12 @@ Configuration:
     logger:
       - name: org.springframework
         level: info
+      - name: io.micrometer
+        level: info
+      - name: com.netflix
+        level: info
+      - name: org.hibernate
+        lavel: info
 
     Root:
       level: debug
