fix typo in hibernate logger level

--- a/ers-service/src/main/resources/log4j2-prod.yml
+++ b/ers-service/src/main/resources/log4j2-prod.yml
@@ -39,7 +39,7 @@ Configuration:
       - name: com.netflix
         level: info
       - name: org.hibernate
-        lavel: info
+        level: info
 
     Root:
       level: info
