--- a/ers-service/src/main/resources/log4j2-dev.yml
+++ b/ers-service/src/main/resources/log4j2-dev.yml
@@ -30,7 +30,7 @@ Configuration:
       - name: com.netflix
         level: info
       - name: org.hibernate
-        lavel: info
+        level: info
 
     Root:
       level: debug
