--- a/ers-service/src/main/resources/log4j2.yml
+++ b/ers-service/src/main/resources/log4j2.yml
@@ -51,4 +51,5 @@ Configuration:
     Root:
       level: debug
       AppenderRef:
-        ref: console
+        - ref: console
+        - ref: file
